Updated: bab 3, penyelesaian masalah

--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -819,7 +819,7 @@ Masalah dimodelkan ke dalam bentuk \textit{linear programming} dengan tujuan men
 \begin{equation}
 	x_{ij\varphi}=\left\{
 		\begin{array}{cl}
-			1 & \text{jika kamera ditempatkan pada \textit{grid point} }(i,j)\\\\
+			1 & \text{jika kamera ditempatkan pada \textit{grid point} }(i,j) \text{ dengan arah pandang } \varphi\\\\
 			0 & \text{jika sebaliknya}
 		\end{array}
 	\right.
